Small tweak to expand/collapse function on tables.

--- a/lib/generators/delayed_job_admin/install/templates/delayed_job_admin.en.yml
+++ b/lib/generators/delayed_job_admin/install/templates/delayed_job_admin.en.yml
@@ -3,6 +3,8 @@ en:
     links:
       archived_jobs: Archives
       jobs: Jobs
+      more: More
+      less: Less
     delayed_jobs:
       no_queued_jobs: No queued jobs
       titles:
