Allowing for configurable DelayedJobAdmin.monitoring_strategies
Each new strategy should be encapsulated in a class that exposes an
instance method of #run_check.

Default behaviour is for a single monitoring strategy given by the
QueueThresholdChecker.

--- a/lib/generators/delayed_job_admin/install/templates/delayed_job_admin.en.yml
+++ b/lib/generators/delayed_job_admin/install/templates/delayed_job_admin.en.yml
@@ -45,7 +45,7 @@ en:
     alert_strategies:
       email_alert_strategy:
         alert_email:
-          subject: 'ALERT: Queue depth on \'%{queue_name}\' has exceeded the threshold of %{threshold}'
+          subject: "ALERT: Queue depth on '%{queue_name}' has exceeded the threshold of %{threshold}"
     destroy_job:
       success: "The delayed job has been successfully destroyed."
       failure: "There has been an error when destroying this delayed job."
